--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "fontsource-roboto": "^3.0.3",
     "react": "^16.13.1",
+    "react-back-to-top-button": "0.0.14",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
